@@ -11,3 +11,11 @@ a.typo3-csh-link span.typo3-csh-inline {
 a.typo3-csh-link:hover span.typo3-csh-inline {
 	display: block;
 }
+
+.t3-help-link span.t3-help-inline {
+	display: none;
+}
+
+a.t3-help-link:hover span.t3-help-inline {
+	display: block;
+}
