@@ -120,3 +120,125 @@ div.typo3-view-help .introduction {
 div.typo3-view-help img.c-inlineimg  {
 	margin-left: 10px;
 }
+
+
+/*** new help code ***/
+.t3-help-teaser {
+	border-bottom: 1px dotted #434343;
+}
+table.t3-help-inline {
+	margin: 3px 4px 20px 0px;
+	padding: 0;
+}
+
+table.t3-help-inline a.t3-help-link {
+	float: none;
+	margin-right: 0;
+}
+
+a.t3-help-link .t3-help-inline {
+	display: none;
+	padding: 0px;
+	position: absolute;
+	width: 200px;
+	z-index: 100;
+}
+
+a.t3-help-link .t3-help-inline.show-right {
+	right: 10px;
+}
+
+table.t3-help-inline a.t3-help-link,
+table.t3-help-inline span.t3-row-header,
+span.t3-help-inline span.t3-row-header,
+a.t3-help-link span.t3-help-inline span.t3-row-header {
+	display: block;
+}
+
+a.t3-help-link:hover .t3-help-inline {
+	display: block;
+}
+
+.t3-help-inline h2.t3-row-header {
+	margin: 0;
+	height: auto;
+}
+
+.t3-help-inline p.t3-help-short {
+	padding: 3px;
+}
+
+table.t3-help-inline a.t3-help-link {
+	height: 16px;
+}
+
+table.t3-help-inline tr td h4 {
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+
+table.t3-help-inline span.paragraph,
+a.t3-help-link span.t3-help-inline span.paragraph {
+	display: block;
+	padding: 3px;
+}
+
+img.t3-help-icon {
+	vertical-align: middle;
+}
+
+div.t3-view-help h1 {
+	margin-bottom: 0px;
+	padding: 10px;
+}
+
+div.t3-view-help h2 {
+	margin-top: 0;
+	padding: 4px 2px 4px 10px;
+}
+
+div.t3-view-help h3 {
+	padding: 5px 10px;
+}
+
+div.t3-view-help h4 {
+	padding: 2px 10px;
+}
+
+div.t3-view-help {
+	margin: 0;
+	width: 100%;
+}
+
+div.t3-view-help p {
+	margin: 4px 4px 12px 10px;
+}
+
+div.t3-view-help div.c-toc {
+	padding-left: 6px;
+}
+
+div.t3-view-help div.c-toc p {
+	margin: 0;
+}
+
+div.t3-view-help div.c-toc ul {
+	padding: 2px 5px;
+}
+
+div.t3-view-help div.c-toc ul li ul {
+	margin-left: 10px;
+}
+
+div.t3-view-help div.c-toc ul li {
+	padding: 2px;
+}
+
+div.t3-view-help .manual-title,
+div.t3-view-help .introduction {
+	padding: 0 12px 6px;
+}
+
+div.t3-view-help img.c-inlineimg  {
+	margin-left: 10px;
+}
